--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,8 @@
 
         <activity android:name=".DisplayMessageActivity" />
         <activity android:name=".PubNubLogin" />
-        <activity android:name=".CheckLogin">
+        <activity android:name=".CheckLogin"
+            android:theme="@android:style/Theme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
