--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation("com.mikepenz:materialdrawer:6.0.1@aar") {
         transitive = true
     }
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
 }
 
 
