--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     }
     implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
     implementation 'com.mikepenz:fontawesome-typeface:4.7.0.2@aar'
+    compile 'com.github.medyo:android-about-page:1.2.2'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
 
 
